CMAKE_MINIMUM_REQUIRED(VERSION 3.7.2)

PROJECT(streebog)

SET(HEADER_FILES gost3411-2012-core.h
                 gost3411-2012-const.h
                 gost3411-2012-precalc.h
                 gost3411-2012-mmx.h
                 gost3411-2012-sse2.h
                 gost3411-2012-sse41.h
                 gost3411-2012-ref.h
                 gost3411-2012-config.h)

SET(SOURCE_FILES gost3411-2012-core.c)

SET(INSTRUCTION_SET_NONE  0)
SET(INSTRUCTION_SET_MMX   1)
SET(INSTRUCTION_SET_SSE2  2)
SET(INSTRUCTION_SET_SSE41 3)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${HEADER_FILES} ${SOURCE_FILES})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} INTERFACE 
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>  
  $<INSTALL_INTERFACE:${INCLUDEDIR}/shipovnik>
)

IF(${GOST_OPTIMIZATION} GREATER_EQUAL ${INSTRUCTION_SET_SSE41})
    MESSAGE(STATUS "GOST 34.11-2012 SSE4.1 optimization enabled")
    TARGET_COMPILE_OPTIONS(${PROJECT_NAME} PRIVATE -msse4.1 -msse2)
    TARGET_COMPILE_DEFINITIONS(
        ${PROJECT_NAME}
        PRIVATE
        -D__GOST3411_HAS_SSE41__
        -D__GOST3411_HAS_SSE2__)
ELSEIF(${GOST_OPTIMIZATION} GREATER_EQUAL ${INSTRUCTION_SET_SSE2})
    MESSAGE(STATUS "GOST 34.11-2012 SSE2 optimization enabled")
    TARGET_COMPILE_OPTIONS(${PROJECT_NAME} PRIVATE -msse2)
    TARGET_COMPILE_DEFINITIONS(${PROJECT_NAME} PRIVATE -D__GOST3411_HAS_SSE2__)
ELSE()
    # MMX optimized version alone doesn't compile, so fall to no optimization
    MESSAGE(STATUS "GOST 34.11-2012 no optimization enabled")
ENDIF()

set_property(TARGET ${PROJECT_NAME} PROPERTY POSITION_INDEPENDENT_CODE ON)
